  AA is a testing revision.  It's usually 00, which means the tarball
     is a public release.  Nonzero versions are limited alpha level
     releases (development snapshots) for specific testers.

[ Hey, Rocco, don't forget to assign a tag to the release after you
  make dist on it!  0.0910 is ``v0_0910''!  For example:

  cvs tag -Rc v0_11   .
  cvs tag -Rc v0_1009 .
]

,----- To Do -----
|
| How about Gtk support?
|
| Better alarms API.  Roderick has threatened to do something.
|
| Why does samples/tk.perl leak memory, and how can I fix it?
|
| caller() calls in POE::Kernel report POE::Kernel lines.  They
| should follow the call chain out to someone else's code.  This
| will be slow.
|
| Write a Filter::HTTPD test.  Which may involve writing a web
| server and client.  Ow! Ow! Ow!
|
| Wheel::ListenAccept is way behind SocketFactory's listen/accept
| code.  Migrate SocketFactory's code to ListenAccept, and write
| a test based on IO::Socket::INET sockets.
|
| Split the samples out into a separate distribution.  POE's
| distribution tree is over 800 kilobytes!  Most of it's supporting
| documentation, tests, and samples.
|
| Revise the POE web pages.
|
| Move the POE mailing list, which seems to have fallen on hard times.
|
| Benchmark index vs. rindex vs. regexp for finding line terminators.
|
`-----------------


0.1104 2000.??.??
-----------------

Jaxdahl donated some shell time on his Win32 machine, allowing me to
figure out why POE was failing miserably with ActiveState's Perl port.
I made a bad assumption about source code newlines in
POE::Preprocessor.

Wheel::ListenAccept wasn't as lagged behind Wheel::SocketFactory as I
had thought.  It required only minor changes to be brought up to date.

Skip some tests on Win32 because pipes can't be made non-blocking
there.

Brian Buchanan found and fixed a problem where SIGCHLD would not be
delivered when child processes exited by signal.

Added t/20_accept.t to test Wheel::ListenAccept.
